[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
itertools = "0.13.0"
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
anyhow = { version = "1.0.86" }
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = "1.7.1"
log = "0.4.22"
log4rs = "1.3.0"
rustyline = "14.0.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[[bin]]
name = "redis"
path = "src/server/main.rs"

[[bin]]
name = "redis_cli"
path = "src/cli_client/main.rs"

[[bin]]
name = "redis_tui"
path = "src/tui_client/main.rs"
